Fix scrollbar issue on mobile browsers

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -39,7 +39,6 @@ body {
   display: flex;
   justify-content: center;
   padding: 0.5rem;
-  overflow-y: hidden;
 }
 
 #app {
@@ -59,8 +58,7 @@ body {
         "trait"
         "persona";
   row-gap: 1rem;
-  overflow-x: hidden;
-  overflow-y: scroll;
+  overflow: hidden;
 }
 
 #developer-titles {
@@ -151,7 +149,7 @@ body {
   overflow-x: scroll;
   scroll-behavior: smooth;
   gap: 15px;
-  height: 50svh;
+  height: 500px;
 }
 
 ds-project-wrapper::-webkit-scrollbar {
